# zinkos

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  Untitled
docs/: bonjour-discovery-plan.md  latency-analysis.md  overview.md  system-overview.md
driver/: CMakeLists.txt  Info.plist  ZinkosBrowse.cpp  ZinkosBrowse.h  ZinkosDevice.cpp  ZinkosDevice.h  ZinkosPlugin.cpp  ZinkosPlugin.h
engine/: Cargo.toml
engine/include/: zinkos_engine.h
engine/src/: config.rs  drift.rs  ffi.rs  lib.rs  pacer.rs  packetizer.rs  ring_buffer.rs  state_machine.rs  udp_sender.rs
receiver/: Cargo.toml
receiver/c/: install-rx.sh  install.sh  zinkos-monitor.sh  zinkos-rx  zinkos-rx.service  zinkos.service.avahi  zinkos_rx.c
receiver/src/: alsa_sink.rs  jitter_buffer.rs  main.rs
scripts/: install.sh  package.sh  reload.sh  uninstall.sh  validate.sh  zinkos
sender/app/: Package.swift
sender/app/Sources/ZinkosMenu/: AudioDaemon.swift  MenuView.swift  PlistConfig.swift  ReceiverBrowser.swift  ReceiverInfo.swift  ZinkosMenuApp.swift
tests/: load_test.c
